<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@drawable/android_bg" >


    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            style="@style/styleCustomLabel"
            android:text="@string/logar"
            android:id="@+id/textView"
            android:layout_centerHorizontal="true"/>

        <EditText
            style="@style/styleCustomEditText"
            android:id="@+id/txtUsuario"
            android:inputType="text"
            android:hint="@string/usuario"
            android:layout_below="@id/textView"
            android:layout_marginTop="75dp"/>

        <EditText
            style="@style/styleCustomEditText"
            android:inputType="textPassword"
            android:id="@+id/txtSenha"
            android:layout_below="@id/txtUsuario"
            android:hint="@string/senha"/>

        <LinearLayout
            style="@style/styleCustom"
            android:layout_gravity="center_horizontal"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/txtSenha">

            <Button
                style="@style/styleCustomBtn"
                android:text="@string/cadastrar"
                android:id="@+id/btnCadastrar"
                android:onClick="cadastrar"/>

            <Button
                style="@style/styleCustomBtn"
                android:text="@string/logar"
                android:id="@+id/btnLogar"
                android:onClick="logar"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/baseProgressBar3"
            android:visibility="invisible"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|center_vertical"
            android:background="#eaebe9"
            android:alpha="0.7">
            <ProgressBar
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>
